feat: setup goose, sqlc and postgres
